# The-World-Machine-Bot

./: .breakpoints  .gitignore  .replit  Languages.txt  README.md  ask_responses.py  battle.py  chars.py  config.json  custom_source.py  database_manager.py  dialogue_generator.py  generate_text.py  initdb.py  initialize_db.py  keep_online.py  load_data.py  loveletter.txt  main.py  music_update.py  music_utilities.py  profile.py  profile_.py  profile_icons.py  pyproject.toml  requirements.txt  response.aidata  response.txt  response_battle.aidata  stamp_list.py  stamp_system.py  test  user_cmds.py  user_database.json  user_database.txt
Badges/: stamp_list.py  stamp_system.py  stamp_viewer.py
Transmissions/: connected.userphone  update.userphone
bot_data/: backgrounds.json  characters.json  command_manager.py  database_manager.py  dialogue_generator.py  embed_gen.py  error_handler.py  generate_text.py  load_data.py  profile_icons.py
commands/: ask.py  battle.py  boilerplate.py  cat.py  daily.py  explode.py  help.py  interaction_.py  music.py  notifications.py  profile.py  restart.py  roll.py  say.py  server_count.py  shipping.py  stamps.py  timestamp.py  translation.py  transmission.py  wikipedia.py
exts/: embed_creator.py  music.py  report.py  transmit.py
static/styles/: cool.css
templates/: cool.html
