[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.6,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
spotipy = "^2.20.0"
discord-py-interactions = "^4.3.1"
aiohttp = "^3.8.1"
Pillow = "^9.2.0"
urllib3 = "^1.26.12"
requests = "^2.28.1"
selenium = "^4.4.3"
phantomjs = "^1.4.1"
interactions-lavalink = "^0.0.3"
lavalink = "^4.0.2"
interactions-autosharder = "^2.1.0"
tqdm = "^4.64.1"
interactions-wait-for = "^1.0.6"
interactions-tasks = "^1.0.0"
interactions-persistence = "^2.2.2"
"youtube.py" = "^2.1.0"
pytube = "^12.1.0"
openai = "^0.23.0"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"